# NewsPhoto

./: .gitattributes  .gitignore  LICENSE  NewsPhoto.code-workspace  README.md  addscrshot.py  bing.py  browser-autotest.py  bs-config.js  index.css  index.html  main.py  main.py.old  new_main.py  news.md  news.txt  package-lock.json  package.json  pyproject.toml  requirements.txt  run.cmd  run.sh  save-as-image.py  test.cmd  today.py
.devcontainer/: Containerfile  Dockerfile  devcontainer.json  pre-setup.sh
.devcontainer/rootful/: devcontainer.json
.devcontainer/rootless/: devcontainer.json
.github/: project-structure.txt
.github/workflows/: main.yml
icons/: icon-dark.icns  icon-light.icns
modules/: arguments.py  bing.py  constants.py  today.py  zhdate.py
push/: preview.ps1  publish.bat  publish.ps1  publish.sh
ref/: bundle.js  index.css  news.txt  springfestival.css
scripts/: build.py  np-gen.spec  np-save.spec  preview.ps1  preview.py  preview.sh  publish.ps1  publish.sh
sources/styles/: dark.css  footer.css  global.css  header.css  index.css  light.css  section.css  springfestival.css
templates/: newsphoto.html5
