[project]
name = "newsphoto"
version = "1.0.0"
description = "NewsPhoto everyday."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pangu>=4.0.6.1",
    "playwright>=1.51.0",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "ruff>=0.11.2",
]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["I"]