[project]
name = "newsphoto"
version = "1.0.0"
description = "NewsPhoto everyday."
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "pangu>=4.0.6.1",
    "playwright>=1.51.0",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "nuitka>=2.7.16",
    "poethepoet>=0.37.0",
    "ruff>=0.11.2",
]

[tool.poe.tasks]
preview = "uv run scripts/preview.py"
build = "uv run scripts/build.py"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["I"]
