[project]
name = "newsphoto"
version = "1.0.0"
description = "NewsPhoto everyday."
readme = "README.md"
requires-python = "==3.14.*"
dependencies = [
    "playwright>=1.51.0",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "poethepoet>=0.37.0",
    "pyinstaller>=6.19.0",
    "ruff>=0.11.2",
]

[tool.poe.tasks]
post-install = "uv run playwright install chromium-headless-shell --with-deps"
preview = "uv run scripts/preview.py"
build = "uv run scripts/build.py"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["I"]
